--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,11 +1,15 @@
-{% if not is_home %}
-<div class="row expanded" id="footer-top-row">
-    This is footer.
-</div>
-{% endif %}
+<div class="container-fluid">
 
-<div class="row expanded" id="footer-bottom-row">
-    <div id="copyright" class="column small-12">
-        Copyright {{"now"|date('Y')}}
+    <div class="row" id="footer-top-row">
+        <div class="col-sm-12 col-md-6">
+            Footer first row
+        </div>
     </div>
+
+    <div class="row" id="footer-bottom-row">
+        <div id="copyright" class="col-sm-12 col-md-6">
+            Copyright {{"now"|date('Y')}}
+        </div>
+    </div>
+
 </div>
