--- a/templates/base.twig
+++ b/templates/base.twig
@@ -9,31 +9,38 @@
 
 <body class="{{body_class}}" data-template="base.twig">
 
-		<header class="header" id="header">
-			{% block header %}
-				{% include "header.twig" %}
-			{% endblock %}
-		</header>
 
-		<section id="content" role="main" class="content-wrapper">
-			<!-- Content block will almost always be over-ridden -->
-			{% block content %}
-				{% if title %}
-					<h1>{{title}}</h1>
-				{% endif %}
-			{% endblock %}
-		</section>
+	<header>
+		{% block header %}
+			{% include "header.twig" with {'menu': menu.get_items} %}
+		{% endblock %}
+	</header>
 
-		{% block footer %}
-			<footer class="{{class}}">
-				{% include 'footer.twig' %}
-			</footer>
-			{{ function('wp_footer') }}
+	
+		<!-- Content block will almost always be over-ridden -->
+		{% block content %}
+			<section id="main" role="main" class="content-wrapper"></section>
+			{% if title %}
+				<h1>{{title}}</h1>
+			{% endif %}
+			</section>
 		{% endblock %}
 
+
+	{% block footer %}
+		<footer class="{{class}}">
+			{% include 'footer.twig' %}
+		</footer>
+		{{ function('wp_footer') }}
+	{% endblock %}
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+	
+	<script src="{{site.theme.link}}/public/js/site.js"></script>
 </body>
 
-<script src="{{site.theme.link}}/public/js/jquery.min.js"></script>
-<script src="{{site.theme.link}}/public/js/site.js"></script>
+
 
 </html>
