--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,11 +1,17 @@
-{% if not is_home %}
-<div class="row expanded" id="footer-top-row">
-    This is footer.
-</div>
-{% endif %}
+<div class="container-fluid">
 
-<div class="row expanded" id="footer-bottom-row">
-    <div id="copyright" class="column small-12">
-        Copyright {{"now"|date('Y')}}
+    <div class="row justify-content-between align-items-center" id="footer-top-row">
+        <div class="col-sm-12 col-md-6">
+            &copy; {{"now"|date('Y')}}
+        </div>
+        <div class="col-sm-12 col-md-6 text-right" id="footer-email">
+            <a href="mailto:{{options.email_address}}">{{options.email_address}}</a>
+        </div>
     </div>
+
+    {# <div class="row" id="footer-bottom-row">
+        <div id="copyright" class="col-sm-12 col-md-6">
+        </div>
+    </div> #}
+
 </div>
