--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -29,20 +29,14 @@ header {
   }
 }
 
-section:last-of-type {
-  margin-bottom: 0;
-}
-
 section {
-  margin-bottom: 2rem;
-
   .section-title {
     font-family: $title-font;
     text-transform: uppercase;
     font-weight: bold;
     text-align: center;
     font-size: 2.5rem;
-    margin: 2rem auto;
+    margin: 3rem auto;
   }
 
   &#banner {
@@ -77,17 +71,17 @@ section {
       #header-button-container {
         position: absolute;
         bottom: 5.5rem;
-        // right: 0;
         width: 100%;
         padding-right: 2rem;
         a {
           margin-right: 2rem;
           padding: 0.4rem 1.5rem;
           font-size: 1.7rem;
-          color: theme-color('warning');
+          color: white;
           background: transparent;
           border-width: 3px;
           border-radius: rem(33px);
+          border-color: white;
           &:hover {
             background: theme-color('warning');
             color: white;
@@ -143,17 +137,58 @@ section {
     margin-left: -$grid-gutter-width / 2;
     margin-right: -$grid-gutter-width / 2;
     padding: 0 4rem 4rem;
-    #portfolio-container {
-      padding: 2rem 0;
+    .portfolio-open {
+      cursor: pointer;
+      margin: 1rem 0 2rem;
       .portfolio-item {
-        display: inherit;
-        height: 240px;
-        width: 370px;
-      }
-      .portfolio-image {  // 370x240
-        width: 40%;
-        height: auto;
+        position: relative;
+        padding-top: 56%;
+        background-size: cover !important;
         border-radius: 5px;
+        .portfolio-info {
+          position: absolute;
+          background: rgba(40, 42, 44, 0.8);
+          opacity: 0;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          border-radius: 5px;
+          transition: opacity 200ms;
+          .portfolio-site-title {
+            width: 75%;
+            text-align: center;
+            font-size: 2.5rem;
+            color: white;
+            text-transform: uppercase;
+          }
+        }
+        &:hover {
+          .portfolio-info {
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+
+  &#testimonial {
+    margin: 4rem 0;
+    .testimonial-quote-icon {
+      display: inline;
+    }
+    .testimonial-text {
+      display: inline;
+    }
+    .testimonial-source {
+      .testimonial-person {
+
+      }
+      .testimonial-role {
+
+      }
+      .testimonial-company {
+
       }
     }
   }
@@ -171,5 +206,30 @@ footer {
     a {
       color: white;
     }
+  }
+}
+
+.modal {
+  .modal-site-url {
+    color: theme-color("primary");
+    transition: color 100ms;
+    &:hover {
+      color: darken(theme-color("primary"), 5%);
+      text-decoration: none;
+    }
+    .modal-site-image {
+      width: 100%;
+      height: auto;
+      margin-top: 0.5rem;
+    }
+    .modal-site-title {
+      margin-top: 2rem;
+      font-family: $title-font;
+      font-size: 2.3rem;
+    }
+  }
+  .modal-site-description {
+    margin-top: 1rem;
+    font-size: 1.2rem;
   }
 }
